✨ (styles): add grid layout and styling for grid-container to enhance   structure and presentation of elements on the page 🐛 (styles): update font-weight for body to improve text appearance   and readability 📝 (about): refactor HTML structure in about page to utilize grid   layout, enhancing the presentation of staff information and images 🔧 (gitignore): add new image file to .gitignore to prevent tracking   of unnecessary assets in the repository

--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -54,6 +54,16 @@
     background-color: var(--white);
     min-height: 50vh;
     color: var(--white);
+    padding: 100px;
+    padding-block: 20px;
+    box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.445);
+}
+
+.light-container>h2,
+.light-container>h3 {
+    color: #1b1b1b;
+    font-size: 3rem;
+    text-align: center;
 }
 
 .light-container .preview-card {
@@ -70,6 +80,7 @@
 }
 
 .preview-card {
+    box-sizing: border-box;
     position: relative;
     width: 100%;
     display: flex;
@@ -92,7 +103,6 @@
 
 .cta-button {
     display: block;
-    align-self: flex-end;
     text-decoration: none;
     padding: 10px;
     background-color: #e9d419;
@@ -130,6 +140,31 @@
 
 .alert-box button {
     background: none;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 100px;
+    padding-block: 20px;
+    gap: 20px;
+}
+
+.span-2 {
+    grid-column: span 2;
+}
+
+.profile-card img {
+    max-width: 98%;
+    border-radius: 2px;
+}
+
+.profile-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 @media(min-width:1250px) {
